Fixing alignments + preview svg

--- a/css/www/templates/page.css
+++ b/css/www/templates/page.css
@@ -23,3 +23,15 @@
 .www-template-preview-img {
   margin-bottom: var(--space-5);
 }
+
+.www-templates-action {
+  cursor: pointer;
+}
+
+.www-templates-action .ampstart-icon{
+  fill: var(--color-black);
+}
+
+.www-templates-action:hover .ampstart-icon {
+  fill: var(--color-font-primary);
+}
